re PR tree-optimization/18400 (wrong unrolling after vectorization due to invalid loop->nb_iterations)

PR tree-opt/18400
        * tree-vectorizer.c (make_loop_iterate_ntimes): Set loop->nb_iterations.
        (vect_transform_loop_bound): Set loop->nb_iterations.

From-SVN: r90626